# sviewer

./: CMakeLists.txt  Dockerfile  README.md
shaders/: julia.frag  mndl.frag  noise.frag
sviewer/: CMakeLists.txt  config.hpp  expr.cpp  expr.hpp  opts.cpp  opts.hpp  sviewer.cpp  utils.cpp  utils.hpp
viewer-core/: CMakeLists.txt  core.cpp  core.hpp
